feat: Add stats endpoint, full health check, improved CSV validation, API interceptors and real-time dashboard stats

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,22 @@
-# Database
-DATABASE_URL=postgresql://fastmission:senha123@localhost:5432/cadastral_db
+# Environment
+ENVIRONMENT=production
 
-# Redis
-REDIS_URL=redis://localhost:6379/0
+# Database (IMPORTANTE: Configurar com credenciais do PostgreSQL do Easypanel)
+DATABASE_URL=postgresql://usuario:senha@postgres:5432/cadastral_db
 
-# API
-API_HOST=0.0.0.0
-API_PORT=8000
+# Redis (IMPORTANTE: Usar hostname do serviço Redis no Easypanel)
+REDIS_URL=redis://redis:6379/0
 
 # Celery
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# API (não necessário no Easypanel - já configurado no Dockerfile)
+# API_HOST=0.0.0.0
+# API_PORT=8000
+
+# CORS - Adicionar domínio do frontend em produção (opcional)
+# CORS_ORIGINS=https://seu-frontend.easypanel.host
+
+# OpenAI - Para integração futura com IA
+# OPENAI_API_KEY=sk-projeto-...
