--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -1,2 +1,2 @@
 # Production API URL - Configure this in Easypanel
-VITE_API_URL=https://seu-backend.easypanel.host/api
+VITE_API_URL=http://fastmission_fastbackend:8000/api
