--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,11 +1,23 @@
-app = "backend-billowing-pond-979"
-primary_region = "gru"
+# fly.toml app configuration file generated for fastmission-worker on 2026-02-26T01:14:31Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'fastmission-worker'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile.worker"
 
 [http_service]
-  internal_port = 8080
+  internal_port = 8000
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
