fix: CORS - os.getenv 3 args crash + trailing slashes + prod origins

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -8,7 +8,30 @@ script_location = alembic
 file_template = %%(rev)s_%%(slug)s
 
 # Timezone for use if the runtime system doesn't
-timezone = America/Sao_Paulo
+timezone = America/Sao_Paulobackend/app/
+├── api/
+│   └── v1/
+│       ├── __init__.py
+│       ├── routes.py              # Router principal
+│       └── endpoints/
+│           ├── __init__.py
+│           ├── lotes.py           # Rotas de lotes
+│           ├── itens.py           # Rotas de itens
+│           └── ncm.py             # Rotas de NCM
+│
+├── controllers/
+│   ├── __init__.py
+│   ├── lote_controller.py         # Orquestra LoteService
+│   ├── item_controller.py         # Orquestra ItemService
+│   └── ncm_controller.py          # Orquestra NCMService
+│
+├── services/                       # ✅ Já temos
+├── repositories/                   # ✅ Já temos
+└── schemas/
+    ├── __init__.py
+    ├── lote_schemas.py            # DTOs de request/response
+    ├── item_schemas.py
+    └── ncm_schemas.py
 
 # Max length of characters to apply to the "slug" field
 truncate_slug_length = 40
